# asv_nav

./: .gitignore
asv_control/: CMakeLists.txt  package.xml
asv_control/include/asv_control/control/: AITSMC.cpp  AITSMC.h  AITSMC_SSY.h  AITSMC_XYH.h
asv_control/include/asv_control/model/: dynamic_model.cpp  dynamic_model.h
asv_control/launch/: aitsmc_launch.py  mpc_launch.py  teleop_launch.py
asv_control/scripts/: teleop_xbox_node.py
asv_control/scripts/mpc/: asv_dynamics.py  asv_mpc.py  mpc_gui.py
asv_control/src/: AITSMC.cpp  AITSMC_SSY.cpp  AITSMC_XYH.cpp  aitsmc_node.cpp  dynamic_model.cpp  dynamic_model_node.cpp  kinematics_node.cpp  mpc_node.cpp  refs_publisher_node.cpp  spline_publisher_node.cpp
asv_control/src/debug/aitsmc/: rviz_refs_node.cpp  sine_refs_node.cpp
asv_control/src/utils/: CatmulRom.cpp  CatmulRom.h
asv_description/: CMakeLists.txt  package.xml
asv_description/launch/: rviz_launch.py
asv_description/rviz/: mpc.rviz
asv_description/urdf/: asv.urdf  ferry_shape.STL
asv_interfaces/: CMakeLists.txt  package.xml
asv_interfaces/include/asv_interfaces/rviz_tools/: center_on_robot_tool.hpp  goal_from_tool.hpp  goal_to_tool.hpp  goal_tool.hpp
asv_interfaces/msg/: AitsmcDebug.msg  Obstacle.msg  ObstacleList.msg  Ref.msg  State.msg  Thrust.msg
asv_interfaces/plugins/: plugin_description.xml
asv_interfaces/src/rviz_tools/: center_on_robot_tool.cpp  goal_from_tool.cpp  goal_to_tool.cpp  goal_tool.cpp
asv_utils/: CMakeLists.txt  package.xml
asv_utils/config/: turning20_initHeading0_NoWind.csv  zigzag20_initHeading0_NoWind.csv
asv_utils/launch/: csv_viewer_launch.py
asv_utils/src/: csv_path_publisher_node.cpp  obstacle_publisher.cpp
src/asv_control/: CMakeLists.txt  README.md  package.xml
src/asv_control/include/asv_control/model/: dynamic_model.h
