<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asv_control</name>
  <version>0.0.0</version>
  <description>ASV navigation project control nodes</description>
  <maintainer email="maxprpxam@icloud.com">max</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>std_srvs</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>tf2_geometry_msgs</buildtool_depend>
  <buildtool_depend>visualization_msgs</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>Eigen3</buildtool_depend>
  <buildtool_depend>tf2_ros</buildtool_depend>
  <buildtool_depend>usv_interfaces</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <buildtool_type>ament_cmake</buildtool_type>
    <buildtool_type>rclcpp</buildtool_type>
    <buildtool_type>std_msgs</buildtool_type>
    <buildtool_type>std_srvs</buildtool_type>
    <buildtool_type>geometry_msgs</buildtool_type>
    <buildtool_type>nav_msgs</buildtool_type>
    <buildtool_type>tf2_geometry_msgs</buildtool_type>
    <buildtool_type>visualization_msgs</buildtool_type>
    <buildtool_type>sensor_msgs</buildtool_type>
    <buildtool_type>Eigen3</buildtool_type>
    <buildtool_type>tf2_ros</buildtool_type>
    <buildtool_type>usv_interfaces</buildtool_type>
  </export>
</package>
